feat: iteration 243 complete mybatis architecture refactor and vue 3 full component parity